test/corpus/commands.txt
================
one line command
================

ctrl - a: echo "Hello World"

---

  (source_file
    (keymap
      (hotkey
        (modifier)
        (key_operator)
        (key))
      (separator)
      (command)))

=================
next line command
=================

ctrl - a:
echo "Hello World"

---

  (source_file
    (keymap
      (hotkey
        (modifier)
        (key_operator)
        (key))
      (separator)
      (command)))

==========================
next line indented command
==========================

ctrl - a:
  echo "Hello World"

---

  (source_file
    (keymap
      (hotkey
        (modifier)
        (key_operator)
        (key))
      (separator)
      (command)))

===========================
multi line indented command
===========================

ctrl - a:
  echo "Hello World"; \
  echo "Foo Bar"; \
  echo "Done"

---

  (source_file
    (keymap
      (hotkey
        (modifier)
        (key_operator)
        (key))
      (separator)
      (command)))

===============
complex command
==================

ctrl - a:
  if ! alacritty msg create-window > /dev/null; then \
    open -a Alacritty; \
  fi

---

   (source_file
     (keymap
       (hotkey
         (modifier)
         (key_operator)
         (key))
       (separator)
       (command)))

==================
arrow operator
==================

ctrl - a -> echo "Hello World"

---

   (source_file
     (keymap
       (hotkey
         (modifier)
         (key_operator)
         (key))
       (separator)
       (command)))
