test/corpus/modifiers.txt
===============
shift modifiers
===============

shift + ctrl - a: echo "Hello World"
shift - b: echo "Hello World"

---

(source_file
  (keymap
    (hotkey
      (modifier)
      (modifier_operator)
      (modifier)
      (key_operator)
      (key))
    (separator)
    (command))
  (keymap
    (hotkey
      (modifier)
      (key_operator)
      (key))
    (separator)
    (command)))

=================
control modifiers
=================

ctrl + shift - a: echo "Hello World"
control - b: echo "Hello World"

---

(source_file
  (keymap
    (hotkey
      (modifier)
      (modifier_operator)
      (modifier)
      (key_operator)
      (key))
    (separator)
    (command))
  (keymap
    (hotkey
      (modifier)
      (key_operator)
      (key))
    (separator)
    (command)))

=================
option modifiers
=================

ctrl + alt - a: echo "Hello World"
control + opt - b: echo "Hello World"
option - c: echo "Hello World"

---

(source_file
  (keymap
    (hotkey
      (modifier)
      (modifier_operator)
      (modifier)
      (key_operator)
      (key))
    (separator)
    (command))
  (keymap
    (hotkey
      (modifier)
      (modifier_operator)
      (modifier)
      (key_operator)
      (key))
    (separator)
    (command))
  (keymap
    (hotkey
      (modifier)
      (key_operator)
      (key))
    (separator)
    (command)))

=================
command modifiers
=================

ctrl + cmd - a: echo "Hello World"
command - b: echo "Hello World"

---

(source_file
  (keymap
    (hotkey
      (modifier)
      (modifier_operator)
      (modifier)
      (key_operator)
      (key))
    (separator)
    (command))
  (keymap
    (hotkey
      (modifier)
      (key_operator)
      (key))
    (separator)
    (command)))

==================
multiple modifiers
==================

ctrl + cmd + opt - a: echo "Hello World"
ctrl + shift + command + opt - b: echo "Hello World"

---

(source_file
  (keymap
    (hotkey
      (modifier)
      (modifier_operator)
      (modifier)
      (modifier_operator)
      (modifier)
      (key_operator)
      (key))
    (separator)
    (command))
  (keymap
    (hotkey
      (modifier)
      (modifier_operator)
      (modifier)
      (modifier_operator)
      (modifier)
      (modifier_operator)
      (modifier)
      (key_operator)
      (key))
    (separator)
    (command)))

=============
meh modifiers
=============

meh - a: echo "Hello World"

---

(source_file
  (keymap
    (hotkey
      (modifier)
      (key_operator)
      (key))
    (separator)
    (command)))

===============
hyper modifiers
===============

hyper - a: echo "Hello World"

---

(source_file
  (keymap
    (hotkey
      (modifier)
      (key_operator)
      (key))
    (separator)
    (command)))

===================
left and right modifiers
===================

lshift - a: echo "Hello World"
rctrl - b: echo "Hello World"
lalt + rshift - c: echo "Hello World"
lcontrol - d: echo "Hello World"
rcommand + lopt - e: echo "Hello World"

---

(source_file
  (keymap
    (hotkey
      (modifier)
      (key_operator)
      (key))
    (separator)
    (command))
  (keymap
    (hotkey
      (modifier)
      (key_operator)
      (key))
    (separator)
    (command))
  (keymap
    (hotkey
      (modifier)
      (modifier_operator)
      (modifier)
      (key_operator)
      (key))
    (separator)
    (command))
  (keymap
    (hotkey
      (modifier)
      (key_operator)
      (key))
    (separator)
    (command))
  (keymap
    (hotkey
      (modifier)
      (modifier_operator)
      (modifier)
      (key_operator)
      (key))
    (separator)
    (command)))

=================
invalid modifiers
=================

ctrl cmd opt - a: echo "Hello World"
lmeh - f: echo "Hello World"

---

(source_file
  (keymap
    (hotkey
      (modifier)
      (ERROR
        (modifier)
        (modifier))
      (key_operator)
      (key))
    (separator)
    (command))
  (ERROR)
  (keymap
    (hotkey
      (modifier)
      (key_operator)
      (key))
    (separator)
    (command)))

